--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Portfolio",
+  "name": "portfolio",
   "version": "1.0.0",
   "description": "Gavin's website",
   "scripts": {
-    "dev": "next dev -H 0.0.0.0",
+    "dev": "next dev",
     "build": "next build",
-    "prettier": "prettier -write",
+    "start": "next start",
     "lint": "next lint"
   },
   "keywords": [],
@@ -16,13 +16,12 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "framer-motion": "^4.1.17",
-    "next": "^12.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "12.0.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "^8.1.0",
-    "eslint-config-next": "^12.0.1",
-    "prettier": "^2.4.1"
+    "eslint-config-next": "^12.0.1"
   }
 }
