--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Gavin Dang",
   "license": "MIT",
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
