--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-intersection-observer": "^8.32.5"
+    "react-intersection-observer": "^8.32.5",
+    "react-typical": "^0.1.3"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
